# experiments

./: .cproject  README.md
constexpr-datastructures/: .cproject  .gitignore  .project  CMakeLists.txt
constexpr-datastructures/include/: const_array.hpp  dispatch_hash.hpp  indexed_storage.hpp  invocation_list.hpp  missing.hpp  pair.hpp
constexpr-datastructures/test/: CMakeLists.txt  const_array.cpp  indexed_storage.cpp  invocation_list.cpp
copy-ellision/: .cproject  .gitignore  .project  CMakeLists.txt
copy-ellision/inc/: ellision.hpp
copy-ellision/src/: ellision.cpp
copy-ellision/test/: CMakeLists.txt  ellision.cpp
devirt/: .cproject  .gitignore  .project
devirt/inc/: novirt.hpp  virt.hpp
devirt/src/: novirt.cpp  virt.cpp
devirt/test/: CMakeLists.txt  config.hpp  novirt.cpp  virt.cpp
functional/: .cproject  .gitignore  .project  CMakeLists.txt
functional/inc/: array.hpp  string.hpp
functional/inc/core/: curried_member.hpp  curry.hpp  curry2.hpp  functor.hpp  fundamentals.hpp
functional/inc/core/util/: delegate.hpp  index_sequence.hpp  lazy.hpp  ref_count_base.hpp
functional/inc/core/util/meta/: is_callable_with.hpp  yes_no_types.hpp
functional/inc/data/: list.hpp
functional/test/: CMakeLists.txt  array.cpp  curried_member.cpp  curry.cpp  curry2.cpp  delegate.cpp  functional_composition.cpp  fundamentals.cpp  is_callable_with.cpp  lazy.cpp  lazy_perf.cpp  list.cpp  ref_count_base.cpp  string.cpp
functional2/: .cproject  .project  CMakeLists.txt
functional2/include/functional/: applicative.hpp  constructor.hpp  expected.hpp  functor.hpp  monad.hpp
functional2/test/: CMakeLists.txt  applicative.cpp  expected.cpp  functor.cpp  monad.cpp
json/: .cproject  .project  CMakeLists.txt
json/include/: json.hpp
json/include/json/: array.hpp  fundamentals.hpp  object.hpp
json/include/json/detail_/: string.hpp
json/test/: CMakeLists.txt  array.cpp  fundamentals.cpp  object.cpp
meta_map/: .cproject  .project  CMakeLists.txt
meta_map/include/: constexpr-map.hpp  constexpr-str.hpp  metamap.hpp  metatrie.hpp  string.hpp
meta_map/test/: CMakeLists.txt  constexpr-map.cpp  meta_map.cpp  meta_trie.cpp  string.cpp  test.cpp
performance/: .cproject  .project  CMakeLists.txt
performance/include/crazy/util/: pimpl.hpp  pimpled_vector.hpp
performance/performance_tests/: CMakeLists.txt  pimpl_vector.cpp  test_pimpl.hpp
performance/unit_tests/: CMakeLists.txt  pimpl.cpp  pimpled_vector.cpp  test_pimpl.cpp  test_pimpl.hpp
stringlib/: .cproject  .project  CMakeLists.txt
stringlib/debug/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
stringlib/debug/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  immutable_string  mutable_string
stringlib/debug/test/Testing/Temporary/: CTestCostData.txt
stringlib/include/: byte_buffer.hpp  string.hpp
stringlib/test/: CMakeLists.txt  byte_buffer_test.cpp  immutable_string_test.cpp  mutable_string_test.cpp
trie/: .cproject  .project  CMakeLists.txt
trie/debug/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
trie/debug/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  runtime_trie
trie/debug/test/Testing/Temporary/: CTestCostData.txt
trie/include/: trie.hpp
trie/test/: CMakeLists.txt  runtime_trie.cpp
